--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+
+
+h1, h2, h3, h4,  h6, form,  nav{
+    font-family: 'Kaushan Script', cursive;
+    font-weight: bolder;
+    font-size: 40px;
+}
+span, .btn, h5, div{
+    font-family: 'Kaushan Script', cursive;
+    font-weight: bolder;
+
+}
+p{
+    font-family: 'Courgette', cursive;
+}
+
 section{
     height: 100%;
 }
